<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_welcome">

    <fragment
        android:id="@+id/navigation_welcome"
        android:name="com.example.birdwatchapp_p2.WelcomeFragment"
        android:label="@string/title_welcome"
        tools:layout="@layout/fragment_welcome" />
    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.birdwatchapp_p2.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/navigation_signup"
        android:name="com.example.birdwatchapp_p2.SignupFragment"
        android:label="@string/title_signup"
        tools:layout="@layout/fragment_signup" />
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.birdwatchapp_p2.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.birdwatchapp_p2.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_captures"
        android:name="com.example.birdwatchapp_p2.ui.captures.CapturesFragment"
        android:label="@string/title_captures"
        tools:layout="@layout/fragment_captures" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.birdwatchapp_p2.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>